Change to standard javascript format

--- a/templates/home.tmpl.html
+++ b/templates/home.tmpl.html
@@ -9,3 +9,10 @@
 	Already Login!<br><br>
 	{{user}}
 </div>
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		<button class="btn btn-block btn-social btn-facebook" ng-click="fbGetPageList()">
+			<i class="fa fa-facebook"></i> Get Facebook Page List
+		</button>
+	</div>
+</div>
