--- a/templates/home.tmpl.html
+++ b/templates/home.tmpl.html
@@ -1,18 +1,18 @@
 <div class="row">
-	<div class="col-md-4 col-md-offset-4">
+	<div class="col-md-4">
 		<button class="btn btn-block btn-social btn-pinterest" ng-click="fbLogout()">
 			<i class="fa fa-facebook"></i> Logout from Facebook
 		</button>
 	</div>
 </div>
-<div class="row text-center">
-	Already Login!<br><br>
-	{{user}}
-</div>
+<h3> </h3>
 <div class="row">
-	<div class="col-md-4 col-md-offset-4">
-		<button class="btn btn-block btn-social btn-facebook" ng-click="fbGetPageList()">
-			<i class="fa fa-facebook"></i> Get Facebook Page List
-		</button>
+	<div class="col-md-4">
+		<div class="list-group" ng-init="fbGetPageList()">
+			<a ui-sref=".comment({pId: '{{page.id}}', access_token: '{{page.access_token}}'})" class="list-group-item" ng-repeat="page in user.pages">{{page.name}}</a>
+		</div>
+	</div>
+	<div class="col-md-8">
+		<ui-view/>
 	</div>
 </div>
