--- a/templates/home.tmpl.html
+++ b/templates/home.tmpl.html
@@ -3,13 +3,11 @@
 		<button class="btn btn-block btn-social btn-pinterest" ng-click="fbLogout()">
 			<i class="fa fa-facebook"></i> Logout from Facebook
 		</button>
-	</div>
-</div>
-<h3> </h3>
-<div class="row">
-	<div class="col-md-4">
+		<h2></h2>
 		<div class="list-group" ng-init="fbGetPageList()">
-			<a ui-sref=".comment({pId: '{{page.id}}', access_token: '{{page.access_token}}'})" class="list-group-item" ng-repeat="page in user.pages">{{page.name}}</a>
+			<a ui-sref=".comment({pId: '{{page.id}}'})" class="list-group-item" ng-repeat="page in user.pages">
+				{{page.name}}
+			</a>
 		</div>
 	</div>
 	<div class="col-md-8">
