--- a/templates/page.tmpl.html
+++ b/templates/page.tmpl.html
@@ -1,7 +1,7 @@
 <div ng-init="init()">
 	<h3>{{currentPage.name}}</h3>
 </div>
-<div class="row">
+<div class="row object">
 	<div class="list-group">
 		<div class="list-group-item" ng-repeat="item in pageObjs | orderBy:'-updated_time'">
 			<div ng-if="item.type == 'status'">
