--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -82,6 +82,7 @@ body {
 	.subcomment {
 		padding: 0px 12px 0px 44px;
 		margin-top: 0px;
+		position: relative;
 		.left {
 			width: 25px;
 			float: left;
@@ -107,8 +108,14 @@ body {
 				font-size: 100%;
 			}
 		}
-		.subcomment {
-			padding: 8px 12px 6px 44px;
+		.border-new:after {
+			background-color: #5890ff;
+			bottom: 0;
+			content: '';
+			left: 30px;
+			position: absolute;
+			top: 0;
+			width: 2px;
 		}
 		.border:after {
 			border-left: 2px solid #dcdee3;
@@ -117,12 +124,18 @@ body {
 			position: absolute;
 			width: 0px;
 			bottom: 0;
-  			top: 4px;
+			top: 0px;
 		}
 		a {
 			color: #3b5998;
 			cursor: pointer;
 			text-decoration: none;
 		}
+	}
+}
+.reply {
+	input {
+		width: 100%;
+		padding-left: 5px;
 	}
 }
