--- a/templates/status.noti.tmpl.html
+++ b/templates/status.noti.tmpl.html
@@ -11,7 +11,7 @@
 				<small>{{item.created_time}}</small>
 			</div>
 		</div>
-		<div class="status-message"><p>{{item.message}}</p></div>
+		<div class="status-message"><p style="white-space: pre;">{{item.message}}</p></div>
 	</div>
 	<div class="comment-list">
 		<div ng-repeat="user in item.comments">
