--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -7,9 +7,22 @@ $fa-font-path:	"../fonts/font-awesome";
 @import "font-awesome/path";
 
 body {
-	padding-top: 20px;
+	padding-top: 30px;
 }
-
+.masthead {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 35%;
+	padding: 3rem 2rem;
+}
+.listing {
+	margin-left: 35%;
+  	width: 65%;
+  	padding-left: 0;
+  	padding-right: 1.5rem;
+}
 .notification {
 	padding: 5px 15px 0px 15px;
 	.status-message {
@@ -39,6 +52,9 @@ body {
 	}
 	.list-group-item {
 		padding: 0px;
+	}
+	.message-content { 
+		white-space: pre;
 	}
 }
 
@@ -88,9 +104,9 @@ body {
 			float: left;
 		}
 		.body {
-			width: calc(100% - 25px);
+			width: calc(100% - 26px);
 			float: left;
-			padding-left: 10px;
+			padding: 1px 1px 1px 10px;
 		}
 		.comment-from {
 			line-height: 1.34;
@@ -138,4 +154,7 @@ body {
 		width: 100%;
 		padding-left: 5px;
 	}
+}
+.badge.red {
+	background-color: #d9534f;
 }
