--- a/templates/comment.tmpl.html
+++ b/templates/comment.tmpl.html
@@ -1,9 +1,88 @@
 <div class="comment-list">
+	<!-- New comment -->
+	<dvi ng-controller="commentObj" class="comment">
+		<div class="media reply comment">
+			<div class="border">
+				<div class="media-left left">
+					<a ng-href="http://www.facebook.com/{{currentPage.id}}" target="_bank">
+						<img class="media-object" ng-src="https://graph.facebook.com/{{currentPage.id}}/picture" width="32px" height="32px" />
+					</a>
+				</div>
+				<div class="media-body body">
+					<input type="text" placeholder="Write a comment..." ng-model="commentMessage" ui-keypress="{'enter' : 'sendComment(pageObjs.id)'}" />
+				</div>
+			</div>
+		</div>
+		<div ng-repeat="newcomment in newComment track by comment.id" class="media new-comment-border">
+			<div class="media" ng-init="reply_comment.id = 0">
+				<div class="media-left left">
+					<a ng-href="http://www.facebook.com/{{newcomment.from.id}}" target="_bank">
+						<img class="media-object" ng-src="https://graph.facebook.com/{{newcomment.from.id}}/picture" width="32px" height="32px" />
+					</a>
+				</div>
+				<div class="media-body body">
+					<span class="media-heading comment-from">
+						<a ng-href="http://www.facebook.com/{{newcomment.from.id}}" target="_bank">{{newcomment.from.name}}</a>
+					</span>
+					<span class="comment-message">{{newcomment.message}}</span>
+					<small ng-if="newcomment.id != null" class="comment-action" ng-controller="likeController">
+						<a target="_bank" ng-click="doLike(newcomment)">
+							<span ng-show="!newcomment.user_likes">Like</span>
+							<span ng-show="newcomment.user_likes">Unlike</span>
+						</a> 
+						<a ng-click="reply_comment.id = !reply_comment.id" target="_bank" >Reply</a> {{newcomment.created_time}}
+					</small>
+					<small ng-if="newcomment.id == null" class="comment-action">
+						Just now
+					</small>
+				</div>
+			</div>
+			<div class="subcomment-list" ng-controller="replyMessage">
+				<div ng-repeat="newcomment in newReply" class="media subcomment">
+					<div class="subcomment-list-border-new">
+						<div class="media-left left">
+							<a ng-href="http://www.facebook.com/{{newcomment.from.id}}" target="_bank">
+								<img class="media-object" ng-src="https://graph.facebook.com/{{newcomment.from.id}}/picture" width="25px" height="25px" />
+							</a>
+						</div>
+						<div class="media-body body">
+							<span class="media-heading comment-from">
+								<a ng-href="http://www.facebook.com/{{newcomment.from.id}}" target="_bank">{{newcomment.from.name}}</a>
+							</span>
+							<span class="comment-message">{{newcomment.message}}</span>
+							<small ng-if="newcomment.id != null" class="comment-action" ng-controller="likeController">
+								<a target="_bank" ng-click="doLike(newcomment)">
+									<span ng-show="!newcomment.user_likes">Like</span>
+									<span ng-show="newcomment.user_likes">Unlike</span>
+								</a> {{newcomment.created_time}}
+							</small>
+							<small ng-if="newcomment.id == null" class="comment-action">
+								Just now
+							</small>
+						</div>
+					</div>
+				</div>
+				<div class="media reply subcomment" ng-show="reply_comment.id">
+					<div class="border">
+						<div class="media-left left">
+							<a ng-href="http://www.facebook.com/{{currentPage.id}}" target="_bank">
+								<img class="media-object" ng-src="https://graph.facebook.com/{{currentPage.id}}/picture" width="25px" height="25px" />
+							</a>
+						</div>
+						<div class="media-body body">
+							<input type="text" placeholder="Write a reply..." ng-model="replyMessage" ui-keypress="{'enter' : 'reply(newcomment.id)'}" />
+						</div>
+					</div>
+				</div>
+			</div>
+		</dvi>
+	</div>
+	<!-- show comment -->
 	<div ng-repeat="comment in pageObjs.comments track by comment.id" class="comment">
 		<div class="media" ng-init="reply_comment.id = 0">
 			<div class="media-left left">
 				<a ng-href="http://www.facebook.com/{{comment.from.id}}" target="_bank">
-					<img class="media-object" ng-src="https://graph.facebook.com/{{comment.from.id}}/picture" width="45px" height="45px" />
+					<img class="media-object" ng-src="https://graph.facebook.com/{{comment.from.id}}/picture" width="32px" height="32px" />
 				</a>
 			</div>
 			<div class="media-body body">
@@ -21,8 +100,8 @@
 			</div>
 		</div>
 		<div class="subcomment-list" ng-controller="replyMessage">
-			<div ng-repeat="subcomment in comment.comments.data" class="media subcomment">
-				<div class="border">
+			<div ng-repeat="subcomment in comment.comments.data">
+				<div class="subcomment-list-border media subcomment">
 					<div class="media-left left">
 						<a ng-href="http://www.facebook.com/{{subcomment.from.id}}" target="_bank">
 							<img class="media-object" ng-src="https://graph.facebook.com/{{subcomment.from.id}}/picture" width="25px" height="25px" />
@@ -33,17 +112,20 @@
 							<a ng-href="http://www.facebook.com/{{subcomment.from.id}}" target="_bank">{{subcomment.from.name}}</a>
 						</span>
 						<span class="comment-message">{{subcomment.message}}</span>
-						<small class="comment-action" ng-controller="likeController">
+						<small class="comment-action" ng-if="subcomment.id != null" ng-controller="likeController">
 							<a target="_bank" ng-click="doLike(subcomment)">
 								<span ng-show="!subcomment.user_likes">Like</span>
 								<span ng-show="subcomment.user_likes">Unlike</span>
 							</a> {{subcomment.created_time}}
 						</small>
+						<small ng-if="subcomment.id == null" class="comment-action">
+							Just now
+						</small>
 					</div>
 				</div>
 			</div>
 			<div ng-repeat="newcomment in newReply" class="media subcomment">
-				<div class="border-new">
+				<div class="subcomment-list-border-new">
 					<div class="media-left left">
 						<a ng-href="http://www.facebook.com/{{newcomment.from.id}}" target="_bank">
 							<img class="media-object" ng-src="https://graph.facebook.com/{{newcomment.from.id}}/picture" width="25px" height="25px" />
@@ -54,11 +136,14 @@
 							<a ng-href="http://www.facebook.com/{{newcomment.from.id}}" target="_bank">{{newcomment.from.name}}</a>
 						</span>
 						<span class="comment-message">{{newcomment.message}}</span>
-						<small class="comment-action" ng-controller="likeController">
+						<small ng-if="newcomment.id != null" class="comment-action" ng-controller="likeController">
 							<a target="_bank" ng-click="doLike(newcomment)">
 								<span ng-show="!newcomment.user_likes">Like</span>
 								<span ng-show="newcomment.user_likes">Unlike</span>
 							</a> {{newcomment.created_time}}
+						</small>
+						<small ng-if="newcomment.id == null" class="comment-action">
+							Just now
 						</small>
 					</div>
 				</div>
@@ -71,7 +156,7 @@
 						</a>
 					</div>
 					<div class="media-body body">
-						<input type="text" placeholder="Write a reply..." ng-model="replyMessage" ui-keypress="{'enter' : 'reply(comment.id, comment.comments.data)'}" />
+						<input type="text" placeholder="Write a reply..." ng-model="replyMessage" ui-keypress="{'enter' : 'reply(comment.id)'}" />
 					</div>
 				</div>
 			</div>
