Add jquery slim

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -7,7 +7,7 @@ $fa-font-path:	"../fonts/font-awesome";
 @import "font-awesome/path";
 
 body {
-	padding-top: 30px;
+	padding-top: 70px;
 }
 .masthead {
 	position: fixed;
@@ -15,7 +15,7 @@ body {
 	bottom: 0;
 	left: 0;
 	width: 35%;
-	padding: 3rem 2rem;
+	padding: 70px 20px;
 }
 .listing {
 	margin-left: 35%;
