--- a/templates/page.tmpl.html
+++ b/templates/page.tmpl.html
@@ -7,7 +7,7 @@
 			<div ng-if="pageObjs.metadata.type == 'album'">
 				<noti-list-temp type="album"></noti-list-temp>
 			</div>
-			<div ng-if="pageObjs.metadata.type == 'photo'">
+			<div ng-if="pageObjs.metadata.type == 'photo' || pageObjs.type == 'photo'">
 				<noti-list-temp type="photo"></noti-list-temp>
 			</div>
 		</div>
