--- a/templates/app.tmpl.html
+++ b/templates/app.tmpl.html
@@ -1,23 +1,34 @@
 <div class="row">
 	<div class="masthead">
 		<div class="panel panel-default" ng-init="init()">
-			<div class="panel-heading">{{currentPage.name}}</div>
+			<div class="panel-heading"><h3>{{currentPage.name}}</h3></div>
 			<div class="panel-body">
 				<p>{{currentPage.about}}</p>
 			</div>
 			<div class="panel-footer">
+				<a class="btn btn-block btn-social btn-vimeo" ui-sref="page">
+					<i class="glyphicon glyphicon-list"></i> Choose page
+				</a>
 				<button class="btn btn-block btn-social btn-pinterest" ng-click="fbLogout()">
 					<i class="fa fa-facebook"></i> Logout from Facebook
 				</button>
 			</div>
 		</div>
-		<div class="list-group">
+		<h4>Notification</h4>
+		<div class="list-group slimscroll">
 			<a class="list-group-item" ng-repeat="notification in notificationList" ui-sref=".object({objId: '{{notification.object.id}}'})">
 				{{notification.title}}
 			</a>
+			<a class="list-group-item" ng-if="notificationList.length == 0">Notification is empty.</a>
 		</div>
 	</div>
 	<div class="listing">
 		<ui-view/>
 	</div>
 </div>
+<script type="text/javascript">
+/* global $ */
+$(function () {
+  $('.slimscroll').slimScroll({height: '450px'})
+})
+</script>
